--- a/app/views/exchanges/show.html.erb
+++ b/app/views/exchanges/show.html.erb
@@ -3,3 +3,11 @@
       <%= node.name %>
       <%= rel.level %>
 <% end %>
+
+<%= @trainer_team %>
+
+<h3> Who do you want to exchange ? </h3>
+
+
+With ?
+<!-- input text -->
