integrating a tiny dirty chat

--- a/app/views/exchanges/show.html.erb
+++ b/app/views/exchanges/show.html.erb
@@ -8,6 +8,9 @@
 
 <h3> Who do you want to exchange ? </h3>
 
-
-With ?
-<!-- input text -->
+Speak to other trainer
+<form>
+  <input type="text" data-behavior="chat_speaker" />
+</form>
+<div id="chat" style="float:right;">
+</div>
